Signed-off-by: ancymathew <ancy@hummingsoft.com.my>

--- a/assets/templates/trainborne.html
+++ b/assets/templates/trainborne.html
@@ -46,9 +46,9 @@
                 <td class="tg-yw4l" style="text-align: center; color: rgb(255, 175, 120);">Dynamic</td>
             </tr>
             <tr>
-                <td class="tg-yw4l" style="text-align: center;">100%</td>
-                <td class="tg-yw4l" style="text-align: center;">80%</td>
-                <td class="tg-yw4l" style="text-align: center;">67%</td>
+                <td class="tg-yw4l" style="text-align: center;"><%=data.data[1].data[0]['overall']%>%</td>
+                <td class="tg-yw4l" style="text-align: center;"><%=data.data[1].data[0]['static']%>%</td>
+                <td class="tg-yw4l" style="text-align: center;"><%=data.data[1].data[0]['dynamic']%>%</td>
             </tr>
             <!--<tr>-->
                 <!--<td style="width: 14.28%; padding: 14px; background : url('../assets/img/systems/stcs/train.svg') no-repeat">8</td>-->
