--- a/frontl2/assets/css/style_dashboard.css
+++ b/frontl2/assets/css/style_dashboard.css
@@ -439,7 +439,7 @@ float - system donut
 
 
 
-#plate_system {
+/*#plate_system {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -452,16 +452,11 @@ float - system donut
 	z-index: 3000;
 }
 
-/*#plate_system a.url_donut_system{
-	z-index: 3100;
-}*/
-
 #donut_plate {
 	position: absolute;
 	bottom: 1%;
 	left: 23.0%;
 	width: 500px;
-	/*height: 400px;*/
 }
 	#donut_plate > div#dp_db_donut_5 {
 		margin-left: 50px;
@@ -497,20 +492,80 @@ div#donut_plate > div.dp_bottom {
 	display: block;
 	text-align: center;
 	font-size: .9em;
-	/*background: rgba(255,255,255,.15);*/
-	/*border-top: 1px solid rgba(255,255,255,.5);*/
 }
 .donut_title2_name {
 	margin-bottom: 3px;
 	display: block;
 	text-align: center;
 	font-size: .9em;
-	/*background: rgba(255,255,255,.1);*/
-	/*border-top: 1px solid rgba(255,255,255,.2);*/
+}*/
+
+
+/*____________________________________________
+float - system donut - chocolate nuts donuts
+--------------------------------------------*/
+
+
+
+#plate_system {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
+#plate_system {
+	z-index: 1000;
+}
+#plate_system a.url_donut_system{
+	z-index: 3000;
+}
 
+#donut_plate {
+	position: absolute;
+	bottom: 1%;
+	left: 14.5%;
+	width: 485px;
+	/*background: rgba(220,220,255,.3);*/
+	/*height: 400px;*/
+}
 
+circle.svg_donut_system_circle {
+	fill: none;
+	stroke-width: 10;
+	stroke-dasharray: 0 150;
+}
+svg.svg_donut_system {
+	margin: 0 auto;
+	background: none;
+	-webkit-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+	border-radius: 50%;
+	display: block;
+}
+
+div#donut_plate > div.dp_top {
+	width: 485px;
+	height: 200px;
+}
+div#donut_plate > div.dp_bottom {
+	display: inline-block;
+	margin: 0 5px;
+	width: 55px;
+	height: 90px;
+}
+	
+.donut_title1_name {
+	margin: 0 30px 3px 30px;
+	display: block;
+	text-align: center;
+	font-size: .9vw;
+}
+.donut_title2_name {
+	margin-bottom: 3px;
+	display: block;
+	text-align: center;
+	font-size: .8vw;
+}
 
 
 
