--- a/assets/templates/stcs_map_bg.html
+++ b/assets/templates/stcs_map_bg.html
@@ -1405,7 +1405,7 @@ animation-name: glow-red;
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title"><i class="fa fa-bars"></i> <span id="idex_stcs_title">Installation</span></h4>
+                <h4 class="modal-title"><i class="fa fa-bars"></i> <span>Installation</span></h4>
             </div>
             <div class="modal-body" style="max-height: 700; height: 330px;">
                 <div class="row" style="margin-top: 35px;">
@@ -1418,7 +1418,7 @@ animation-name: glow-red;
                                     <th style="text-align: center; color: rgb(0, 158, 140);">ON WAYSIDE</th>
                                 </tr>
                                 </thead>
-                                <tbody id="status_container">
+                                <tbody id="install_container">
                                 <tr>
                                     <td><div class="col-sm-2"><input type="checkbox"></div><div class="col-sm-10">Sample1</div></td>
                                     <td><div class="col-sm-2"><input type="checkbox"></div><div class="col-sm-10">Sample1</div></td>
